# uhh_biostats

./: .gitignore  Exercise_2_.ipynb  Exercise_3_.ipynb  Exercise_4_.ipynb  main.py  pyproject.toml
Exe_1/: Exercise_1.ipynb  sequence.gb
Exe_2/: test.ipynb
Exe_5/: Exercise_5.ipynb
Exe_6/: Exercise_6.ipynb
ex_2/: Exercise_2_.ipynb
